--- a/index.html
+++ b/index.html
@@ -96,8 +96,8 @@
             <a class="btn btn-large btn-primary" href="https://arkos.io/#" id="acthead">Go back</a>
         </div>
 <div class="headerpane">
-<h1>Your data, your rules.</h1>
-<p class="lead">A project to help users self-host their websites, email, files and more. Decentralize your web and reclaim your privacy rights while keeping the conveniences you need.</p>
+<h1>Your computing club can invite people into open source.</h1>
+<p class="lead">Schedule a day to teach version control etc. and help classmates contribute patches to the free software community, gaining valuable skills and experience. We (OpenHatch) will help you do it.</p>
 <p>            <a class="btn btn-large btn-success" href="https://arkos.io/#" id="actvideo"><i class="icon-facetime-video"></i> Watch the video</a> <a class="btn btn-large btn-primary" href="https://arkos.io/what-is-arkos"><i class="icon-question-sign"></i> Learn more</a>
         </p></div>
 <p></p></div>
