--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
         </div>
 <div class="headerpane">
 <h1>Your computing club can invite people into open source.</h1>
-<p class="lead">Schedule a day to teach version control etc. and help classmates contribute patches to the free software community, gaining valuable skills and experience. We (OpenHatch) will help you do it.</p>
+<p class="lead">Schedule a day to teach version control etc. with an Open Source Comes to Campus workshop. We (OpenHatch) will provide you tools, mentorship, and connections to make it happen.</p>
 <p>            <a class="btn btn-large btn-success" href="https://arkos.io/#" id="actvideo"><i class="icon-facetime-video"></i> Watch the video</a> <a class="btn btn-large btn-primary" href="https://arkos.io/what-is-arkos"><i class="icon-question-sign"></i> Learn more</a>
         </p></div>
 <p></p></div>
@@ -106,16 +106,16 @@
 <div class="container">
 <div class="row-fluid">
 <div class="span4">
-<h2>Fast. <i class="icon-bolt pull-right"></i></h2>
-<p>Install arkOS to your Raspberry Pi with all the services you want pre-installed. Plug the Pi into your router, then customize it to your heart’s content from your browser. Get up and go quickly, sharing only what you want to share.
+<h2>Welcoming. <i class="icon-bolt pull-right"></i></h2>
+<p>Open Source Comes to Campus is a curriculum designed for newcomers to open source. The event you run will inviteTheteaches Open Source Comes tInstall arkOS to your Raspberry Pi with all the services you want pre-installed. Plug the Pi into your router, then customize it to your heart’s content from your browser. Get up and go quickly, sharing only what you want to share.
 </p></div>
 <div class="span4">
 <h2>Easy. <i class="icon-thumbs-up pull-right"></i></h2>
-<p>Setting up your server and managing it on a day-to-day basis has never been easier. You don’t have the time to learn hundreds of commands just to keep things running — let your Raspberry Pi do the work for you.
+<p>As the organizer of a local event, you'll get all the teaching resources you need: slides, hands-on exercises for students, and more. We'll help you find professional programers to help during the event, and curate "bitesize bugs" so your attendees have a gentle on-ramp into a real open source project.
 </p></div>
 <div class="span4">
-<h2>Secure. <i class="icon-lock pull-right"></i></h2>
-<p>Don’t give the platform services another byte! Keep your data to yourself and fine-tune your server software with ease. Share only what you want to share with the world, while still keeping the convenient features that you rely on.
+<h2>Practical. <i class="icon-lock pull-right"></i></h2>
+<p>Students will rave about the practical skills they'll learn: version control, how to communicate in a big software project, and how open source culture works. They'll gain new connections to professionals active in open source development.
 </p></div>
 </div>
 </div>
