--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 <div id="wrap">
   <!--[if lt IE 7]><div class="alert">Your browser is <em>ancient!</em> <a href="http://browsehappy.com/">Upgrade to a different browser</a> or <a href="http://www.google.com/chromeframe/?redirect=true">install Google Chrome Frame</a> to experience this site.</div><![endif]-->
 
-  <header class="banner navbar navbar-static-top" role="banner">
+  <header class="banner navbar navbar-static-top" role="banner" style="display: none;">
   <div class="navbar-inner">
     <div class="container">
       <a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
