Finish explaining "Welcoming"

--- a/index.html
+++ b/index.html
@@ -107,8 +107,7 @@
 <div class="row-fluid">
 <div class="span4">
 <h2>Welcoming. <i class="icon-bolt pull-right"></i></h2>
-<p>Open Source Comes to Campus is a curriculum designed for newcomers to open source. The event you run will inviteTheteaches Open Source Comes tInstall arkOS to your Raspberry Pi with all the services you want pre-installed. Plug the Pi into your router, then customize it to your heart’s content from your browser. Get up and go quickly, sharing only what you want to share.
-</p></div>
+<p>Open Source Comes to Campus is a curriculum designed for newcomers to open source. We've honed the workshop over three years of practice with 20 student groups, minimizing social, technical, and knowledge dependencies. Now you can run an inviting event like that, too.</p></div>
 <div class="span4">
 <h2>Easy. <i class="icon-thumbs-up pull-right"></i></h2>
 <p>As the organizer of a local event, you'll get all the teaching resources you need: slides, hands-on exercises for students, and more. We'll help you find professional programers to help during the event, and curate "bitesize bugs" so your attendees have a gentle on-ramp into a real open source project.
