--- a/index.html
+++ b/index.html
@@ -120,13 +120,17 @@
 </div>
 </div>
 <div class="container">
-<h1 style="text-align: center;">What is arkOS?</h1>
+<h1 style="text-align: center;">What is Open Source Comes to Campus?</h1>
 <div class="span8" style="float: none; margin-left: auto; margin-right: auto;">
 <div class="media">
 <h1 class="pull-left" style="margin-right: 20px;"><i class="icon-cogs icon-2x"></i></h1>
 <div class="media-body">
-<h3 class="media-heading">Not just an operating system.</h3>
-<p>arkOS is a lightweight Linux-based operating system that runs on a Raspberry Pi. But arkOS more than just an operating system — it is a full software stack managing your self-hosting experience in an intuitive and intelligent way. arkOS does the work for you.</p>
+<h3 class="media-heading">Not just a curriculum.</h3>
+<p>Open Source Comes to Campus is a day-long, hands-on workshop: in the morning, students learn about version control; the history
+of open source; how open source communities communicate on bug trackers, IRC, and mailing lists; and attend a career panel to
+understand how open source plays a part in professionals' lives. In the afternoon, students work together with existing open source
+projects to make real changes to projects people use.
+</p>
 </div>
 </div>
 <div class="homedivide">
@@ -134,8 +138,12 @@
 <div class="media">
 <h1 class="pull-left" style="margin-right: 20px;"><i class="icon-desktop icon-2x"></i></h1>
 <div class="media-body">
-<h3 class="media-heading">A visual gateway to your self-hosted web.</h3>
-<p>arkOS will allow you to run websites, email accounts, social networking profiles and much more, from its clean and easy-to-use graphical interface. With Genesis, even the most complex task becomes possible. No need to spend hours looking up command line functions — or learning to use Linux itself. Genesis gives you the power to manage your online life like it was meant to be done.</p>
+<h3 class="media-heading">Supported by OpenHatch and the Open Source Initiative</h3>
+<p>Two national non-profits in open source, OpenHatch and OSI, fund
+and organize these events. That means as a local organizer, you'll be
+supported through some of the challenges you'll face: logistics,
+finding food sponsors, customizing the curriculum, and more.
+</p>
 </div>
 </div>
 <div class="homedivide">
@@ -143,8 +151,12 @@
 <div class="media">
 <h1 class="pull-left" style="margin-right: 20px;"><i class="icon-cloud icon-2x"></i></h1>
 <div class="media-body">
-<h3 class="media-heading">Your own private “cloud.”</h3>
-<p>With arkOS, you can will be able to run and maintain a variety of personal cloud services with the push of a button. Using solutions like ownCloud, you can store your calendar, contacts, files, music, photos and more at home, and manage all of these items. Share them only with the people you want to see them. No more “privacy creep” from services like Google or Facebook – with arkOS, you become the master of your own privacy controls.</p>
+<h3 class="media-heading">Free of cost</h3>
+<p>The curriculum to Open Source Comes to Campus is available for
+free, under an open source-style license. As a non-profit, OpenHatch
+relies on donations, so if your student group budget can afford paying
+a fee, we would be happy to accept it, but we will not turn you away
+if not.</p>
 </div>
 </div>
 <div class="homedivide">
@@ -152,8 +164,8 @@
 <div class="media">
 <h2 class="pull-left" style="margin-right: 20px;"><i class="icon-globe icon-3x"></i></h2>
 <div class="media-body">
-<h3 class="media-heading">Your data’s gateway to the Internet.</h3>
-<p>Don’t want the trouble of buying your own domain? Don’t worry. arkOS will allow you to connect your node to the Internet anyway, through a variety of services like dynamic DNS and port relays. Sometimes your Internet connection might prohibit you hosting your own data. In these circumstances, arkOS will provide ways to connect your node to the greater World Wide Web.</p>
+<h3 class="media-heading">Your student group's best event this year.</h3>
+<p>Student computing groups are itching for practical, hands-on activities that deepen their members' knowledge and enable them to be a part of computing culture. Contact us now and let's get the ball rolling!</p>
 </div>
 <div class="homedivide">
 <i class="icon-caret-down"></i></div>
