Adjust Twitter IRC Mailing List links

--- a/index.html
+++ b/index.html
@@ -180,10 +180,9 @@ if not.</p>
 <div class="span3">
 <h4>Stay in Touch</h4>
 <ul>
-<li><a href="https://twitter.com/cznweb"><i class="icon-twitter"></i> Twitter</a></li>
-<li><a href="https://arkos.io/irc"><i class="icon-twitter"></i> IRC</a></li>
-<li><a href="https://joindiaspora.com/people/f4aefef1c70c5a0a"><i class="icon-asterisk"></i> Diaspora</a></li>
-<li><a href="https://lists.citizenweb.is/listinfo/arkos"><i class="icon-envelope"></i> Mailing List</a></li>
+<li><a href="https://twitter.com/openhatch"><i class="icon-twitter"></i> Twitter</a></li>
+<li><a href="https://openhatch/contact/"><i class="icon-twitter"></i> IRC</a></li>
+<li><a href="http://lists.openhatch.org/mailman/listinfo/osctc-planning"><i class="icon-envelope"></i> Mailing List</a></li>
 </ul>
 </div>
 <div class="span3">
