Ditch Development; add OH logo

--- a/index.html
+++ b/index.html
@@ -186,17 +186,10 @@ if not.</p>
 </ul>
 </div>
 <div class="span3">
-<h4>Development</h4>
-<ul>
-<li><a href="https://github.com/cznweb"><i class="icon-github-alt"></i> Source Code</a></li>
-<li><a href="https://arkos.io/dev/contributions"><i class="icon-thumbs-up"></i> How to Contribute</a></li>
-<li><a href="https://arkos.io/dev/changelogs"><i class="icon-exclamation-sign"></i> Changelogs</a></li>
-<li><a href="https://lists.citizenweb.is/listinfo/arkos"><i class="icon-envelope"></i> Mailing List</a></li>
-</ul>
 </div>
 <div class="span3 offset3">
 <h4>A project of</h4>
-<p><a href="https://citizenweb.is/"><img src="./index_files/logo-citizenweb-white-450.png" width="200px"></a>
+<p><a href="https://openhatch.org/"><img src="https://openhatch.org/w/images/thumb/a/a6/Openhatch-logo.png/500px-Openhatch-logo.png" width="200px"></a>
 </p></div>
 </div>
 </div>
