Make the footer not show up

--- a/index.html
+++ b/index.html
@@ -197,9 +197,9 @@ if not.</p>
         </div><!-- /.main -->
           </div><!-- /.content -->
   </div><!-- /.wrap -->
-<div id="push"></div>
+<div id="push" style="display:none;"></div>
     </div>
-  <footer class="content-info" role="contentinfo">
+  <footer class="content-info" role="contentinfo" style="display: none;">
   <div class="container">
         <span style="font-size: 13px; line-height: 1.3;"><p>© 2013 <a href="https://citizenweb.is/">The CitizenWeb Project</a>. arkOS™, the arkOS Logo, Genesis™ and arkOS CONNECT™ are trademarks of The CitizenWeb Project.<br> Raspberry Pi is a trademark of the <a href="http://www.raspberrypi.org/">Raspberry Pi Foundation.</a> <em>Photo courtesy <a href="https://secure.flickr.com/photos/32716504@N03/">Flickr - SirMo76</a>.</em>
 </p>
