--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
             <a class="btn btn-large btn-primary" href="https://arkos.io/#" id="acthead">Go back</a>
         </div>
 <div class="headerpane">
-<h1>Your computing club can invite people into open source.</h1>
+<h1>Your women in CS group can invite people into open source.</h1>
 <p class="lead">Schedule a day to teach version control etc. with an Open Source Comes to Campus workshop. We (OpenHatch) will provide you tools, mentorship, and connections to make it happen.</p>
 <p>            <a class="btn btn-large btn-success" href="#signup" id="actsignup"><i class="icon-facetime-video"></i> Get started</a> <a class="btn btn-large btn-primary" href="https://arkos.io/what-is-arkos"><i class="icon-question-sign"></i> Learn more</a>
         </p></div>
