Fix "learn more" link

--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
 <div class="headerpane">
 <h1>Your women in CS group can invite people into open source.</h1>
 <p class="lead">Schedule a day to teach version control etc. with an Open Source Comes to Campus workshop. We (OpenHatch) will provide you tools, mentorship, and connections to make it happen.</p>
-<p>            <a class="btn btn-large btn-success" href="#signup" id="actsignup"><i class="icon-facetime-video"></i> Get started</a> <a class="btn btn-large btn-primary" href="https://arkos.io/what-is-arkos"><i class="icon-question-sign"></i> Learn more</a>
+<p>            <a class="btn btn-large btn-success" href="#signup" id="actsignup"><i class="icon-facetime-video"></i> Get started</a> <a class="btn btn-large btn-primary" href="#learnmore"><i class="icon-question-sign"></i> Learn more</a>
         </p></div>
 <p></p></div>
 </div>
@@ -120,7 +120,7 @@
 </div>
 </div>
 <div class="container">
-<h1 style="text-align: center;">What is Open Source Comes to Campus?</h1>
+<h1 id="learnmore" style="text-align: center;">What is Open Source Comes to Campus?</h1>
 <div class="span8" style="float: none; margin-left: auto; margin-right: auto;">
 <div class="media">
 <h1 class="pull-left" style="margin-right: 20px;"><i class="icon-cogs icon-2x"></i></h1>
