Talk up our experience

--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@ if not.</p>
 <h2 class="pull-left" style="margin-right: 20px;"><i class="icon-globe icon-3x"></i></h2>
 <div class="media-body">
 <h3 class="media-heading">Your student group's best event this year.</h3>
-<p>Student computing groups are itching for practical, hands-on activities that deepen their members' knowledge and enable them to be a part of computing culture. Contact us now and let's get the ball rolling!</p>
+<p>We've tested the curriculum and constantly improved it, over the past 3 years and 20 events. Student computing groups are itching for practical, hands-on activities that deepen their members' knowledge and enable them to be a part of computing culture. Contact us now and let's get the ball rolling!</p>
 </div>
 <div class="homedivide">
 <i class="icon-caret-down"></i></div>
