Emphasize the curriculum more

--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
 <div class="media">
 <h1 class="pull-left" style="margin-right: 20px;"><i class="icon-cogs icon-2x"></i></h1>
 <div class="media-body">
-<h3 class="media-heading">Not just a curriculum.</h3>
+<h3 class="media-heading">A curriculum built to engage students.</h3>
 <p>Open Source Comes to Campus is a day-long, hands-on workshop: in the morning, students learn about version control; the history
 of open source; how open source communities communicate on bug trackers, IRC, and mailing lists; and attend a career panel to
 understand how open source plays a part in professionals' lives. In the afternoon, students work together with existing open source
@@ -142,7 +142,7 @@ projects to make real changes to projects people use.
 <p>Two national non-profits in open source, OpenHatch and OSI, fund
 and organize these events. That means as a local organizer, you'll be
 supported through some of the challenges you'll face: logistics,
-finding food sponsors, customizing the curriculum, and more.
+finding food sponsors, customizing the content, and more.
 </p>
 </div>
 </div>
