--- a/index.html
+++ b/index.html
@@ -127,11 +127,8 @@
 <h1 class="pull-left" style="margin-right: 20px;"><i class="icon-cogs icon-2x"></i></h1>
 <div class="media-body">
 <h3 class="media-heading">A curriculum built to engage students.</h3>
-<p>Open Source Comes to Campus is a day-long, hands-on workshop: in the morning, students learn about version control; the history
-of open source; how open source communities communicate on bug trackers, IRC, and mailing lists; and attend a career panel to
-understand how open source plays a part in professionals' lives. In the afternoon, students work together with existing open source
-projects to make real changes to projects people use.
-</p>
+<p>You can find the full curriculum for Open Source Comes to Campus on the <a href="https://openhatch.org/wiki/Open_Source_Comes_to_Campus/Curriculum">Curriculum</a> page. All of the activities have the materials we use available, and many have instructor guides/walkthroughs as well. We're beginning the process of adding screencasts/videos for some of our materials as well.</p>
+<p>We're happy to talk with you at length about the curriculum and do trainings for any activities or sections you don't feel comfortable with.</p>
 </div>
 </div>
 <div class="homedivide">
