copy logistics section

--- a/index.html
+++ b/index.html
@@ -136,12 +136,9 @@
 <div class="media">
 <h1 class="pull-left" style="margin-right: 20px;"><i class="icon-desktop icon-2x"></i></h1>
 <div class="media-body">
-<h3 class="media-heading">Supported by OpenHatch and the Open Source Initiative</h3>
-<p>Two national non-profits in open source, OpenHatch and OSI, fund
-and organize these events. That means as a local organizer, you'll be
-supported through some of the challenges you'll face: logistics,
-finding food sponsors, customizing the content, and more.
-</p>
+<h3 class="media-heading">Logistics included</h3>
+<p>There are a number of logistical hurdles when planning an event, from finding space and making sure you have the right equipment to ordering the right amount of food. We keep these logistics organized via a <a href="https://drive.google.com/?tab=mo&authuser=0#folders/0B4HP1ey91UqPb1RrN25YOFA4V3c">shared folder</a> which you can copy for your event. The <a href="https://openhatch.org/wiki/Open_Source_Comes_to_Campus/Logistics">Logistics</a> page has a bunch of advice as well (and is referenced several times from the overview documents in the shared folder.)</p>
+<p>If you find any of this documentation confusing or insufficient, we'll be happy to answer all your questions (and we'll use your feedback to improve our process!)</p>
 </div>
 </div>
 <div class="homedivide">
