Publicity and staff

--- a/index.html
+++ b/index.html
@@ -146,12 +146,8 @@
 <div class="media">
 <h1 class="pull-left" style="margin-right: 20px;"><i class="icon-cloud icon-2x"></i></h1>
 <div class="media-body">
-<h3 class="media-heading">Free of cost</h3>
-<p>The curriculum to Open Source Comes to Campus is available for
-free, under an open source-style license. As a non-profit, OpenHatch
-relies on donations, so if your student group budget can afford paying
-a fee, we would be happy to accept it, but we will not turn you away
-if not.</p>
+<h3 class="media-heading">Publicity support</h3>
+<p>We'll provide you with a customizable <a href="https://openhatch.org/wiki/Open_Source_Comes_to_Campus/Logistics/Publicity_Website">publicity website</a> as well as template <a href="https://github.com/openhatch/open-source-comes-to-campus/tree/master/flyers/publicity_flyer_templates">flyers</a> and template <a href="https://drive.google.com/?tab=mo&authuser=0#folders/0B4HP1ey91UqPdkhaWDF1U2dhYzQ">emails</a>. We're happy to help if you have additional ideas for publicity.</p>
 </div>
 </div>
 <div class="homedivide">
@@ -159,8 +155,14 @@ if not.</p>
 <div class="media">
 <h2 class="pull-left" style="margin-right: 20px;"><i class="icon-globe icon-3x"></i></h2>
 <div class="media-body">
-<h3 class="media-heading">Your student group's best event this year.</h3>
-<p>We've tested the curriculum and constantly improved it, over the past 3 years and 20 events. Student computing groups are itching for practical, hands-on activities that deepen their members' knowledge and enable them to be a part of computing culture. Contact us now and let's get the ball rolling!</p>
+<h3 class="media-heading">Volunteer staff</h3>
+<p>One of the most important parts of a successful event is making sure you have friendly, knowledgeable, enthusiastic staff. We have a large network of OpenHatch fans and volunteers who we'll ask to staff your event, and we'll help you <a href="https://openhatch.org/wiki/Open_Source_Comes_to_Campus/Logistics#How_do_you_find_staff.3F">find new volunteers</a> as well.<p>
+<p>We'll also support you with a number of remote staff, including:</p>
+<ul>
+<li>Throughout the event, Asheesh and/or Shauna will be available remotely.</li>
+<li>During the contributions workshop, we'll have maintainers of <a href="https://openhatch.org/wiki/OpenHatch_affiliated_projects">selected projects</a> available to help guide attendees through contributing to said projects via IRC.</li>
+<li>There are pros and cons to doing the career panel remotely. If you decide you want to do the career panel via videoconference, we can hook you up with some amazing people working in open source who will participate.</li>
+</ul>
 </div>
 <div class="homedivide">
 <i class="icon-caret-down"></i></div>
