de-women-ifying

--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
             <a class="btn btn-large btn-primary" href="https://arkos.io/#" id="acthead">Go back</a>
         </div>
 <div class="headerpane">
-<h1>Your women in CS group can invite people into open source.</h1>
+<h1>Your college's computing group can invite people into open source.</h1>
 <p class="lead">Schedule a day to teach version control etc. with an Open Source Comes to Campus workshop. We (OpenHatch) will provide you tools, mentorship, and connections to make it happen.</p>
 <p>            <a class="btn btn-large btn-success" href="#signup" id="actsignup"><i class="icon-facetime-video"></i> Get started</a> <a class="btn btn-large btn-primary" href="#learnmore"><i class="icon-question-sign"></i> Learn more</a>
         </p></div>
@@ -179,7 +179,7 @@ ALL_CAPS_WORDS with something relevant to you!</p>
 To: hello@openhatch.org
 Subject: Let's bring Open Source Comes to Campus to COLLEGE_NAME
 
-Hi there! I'm so excited because I found the Open Source Comes to Campus page for women in CS groups, and I want to help run an event with my club.
+Hi there! I'm so excited because I found the Open Source Comes to Campus page, and I want to help run an event with my club.
 
 My name is: MY_NAME
 
