Longer but clearer lead

--- a/index.html
+++ b/index.html
@@ -98,7 +98,8 @@
         </div>
 <div class="headerpane">
 <h1>Your college's computing group can invite people into open source.</h1>
-<p class="lead">Schedule a day to teach version control etc. with an Open Source Comes to Campus workshop. We (OpenHatch) will provide you tools, mentorship, and connections to make it happen.</p>
+<p class="lead">Open Source Comes to Campus is a one-day workshop to teach the tools and culture of open source development and to help students submit changes to real projects.  <a href="#">Twenty schools</a> have run this event.  What about yours?
+</p>
 <p>            <a class="btn btn-large btn-success" href="#signup" id="actsignup"><i class="icon-facetime-video"></i> Get started</a> <a class="btn btn-large btn-primary" href="#learnmore"><i class="icon-question-sign"></i> Learn more</a>
         </p></div>
 <p></p></div>
