--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
             <a class="btn btn-large btn-primary" href="https://arkos.io/#" id="acthead">Go back</a>
         </div>
 <div class="headerpane">
-<h1>Your college's computing group can invite people into open source.</h1>
+<h1>Bring open source to your campus.</h1>
 <p class="lead">Open Source Comes to Campus is a one-day workshop to teach the tools and culture of open source development and to help students submit changes to real projects.  <a href="#">Twenty schools</a> have run this event.  What about yours?
 </p>
 <p>            <a class="btn btn-large btn-success" href="#signup" id="actsignup"><i class="icon-facetime-video"></i> Get started</a> <a class="btn btn-large btn-primary" href="#learnmore"><i class="icon-question-sign"></i> Learn more</a>
