Now with better grammar

--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
 ALL_CAPS_WORDS with something relevant to you!</p>
 <p><pre style="width: 400px; white-space: pre-wrap; word-wrap: break-word;">
 To: hello@openhatch.org
-Subject: Let's bring Open Source Comes to Campus
+Subject: Let's bring Open Source to Campus
 
 Hi there! I'm so excited because I found the Open Source Comes to Campus page, and I want to help run an event with my club.
 
