Simplifying the text

--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@ ALL_CAPS_WORDS with something relevant to you!</p>
 To: hello@openhatch.org
 Subject: Let's bring Open Source to Campus
 
-Hi there! I'm so excited because I found the Open Source Comes to Campus page, and I want to help run an event with my club.
+Hi there! I'm so excited because I found the Open Source Comes to Campus page, and I want to run an event.
 
 My college is called: COLLEGE_NAME
 
