Slight visual cleanups to the email

--- a/index.html
+++ b/index.html
@@ -191,8 +191,7 @@
 <h3 id="signup" class="media-heading">Get started.</h3>
 <p>Copy and paste this into your email program. Be sure to replace the
 ALL_CAPS_WORDS with something relevant to you!</p>
-<p><pre style="width: 400px; white-space: pre-wrap; word-wrap: break-word;">
-To: hello@openhatch.org
+<p><div style="margin-top: 1em; background-color: #ddd; max-width: 550px; font-family: monospace; white-space: pre-wrap;">To: hello@openhatch.org
 Subject: Let's bring Open Source to Campus
 
 Hi there! I'm so excited because I found the Open Source Comes to Campus page, and I want to run an event.
@@ -207,8 +206,7 @@ Let's work together and make an event happen!
 
 Sincerely,
 
-MY_NAME
-</pre>
+MY_NAME</div>
 </p>
 </div>
 </div>
