improved 'We provide...' section text

--- a/index.html
+++ b/index.html
@@ -122,14 +122,14 @@
 </div>
 </div>
 <div class="container">
-<h1 id="learnmore" style="text-align: center;">What is Open Source Comes to Campus?</h1>
+<h1 id="learnmore" style="text-align: center;">We provide...</h1>
 <div class="span8" style="float: none; margin-left: auto; margin-right: auto;">
 <div class="media">
 <h1 class="pull-left" style="margin-right: 20px;"><i class="icon-cogs icon-2x"></i></h1>
 <div class="media-body">
-<h3 class="media-heading">A curriculum built to engage students.</h3>
-<p>You can find the full curriculum for Open Source Comes to Campus on the <a href="https://openhatch.org/wiki/Open_Source_Comes_to_Campus/Curriculum">Curriculum</a> page. All of the activities have the materials we use available, and many have instructor guides/walkthroughs as well. We're beginning the process of adding screencasts/videos for some of our materials as well.</p>
-<p>We're happy to talk with you at length about the curriculum and do trainings for any activities or sections you don't feel comfortable with.</p>
+<h3 class="media-heading">A curriculum built to engage students</h3>
+<p>Our curriculum covers the practical skills students need to contribute to open source projects, such as using version control, issue trackers, and IRC. It creates connections between students and open source professionals who can explain how the community and culture works. And it gives students the opportunity to make real contributions to active open source projects - all in single day!</p> 
+<p>All of our curriculum materials are online, and most activities have instructor walkthroughs and/or screencasts as well. <a href="https://openhatch.org/wiki/Open_Source_Comes_to_Campus/Curriculum">Take a look</a> at what we offer. We're happy to help you adjust the curriculum to meet your needs, and do trainings for any activities or sections you don't feel comfortable with.</p>
 </div>
 </div>
 <div class="homedivide">
@@ -137,9 +137,8 @@
 <div class="media">
 <h1 class="pull-left" style="margin-right: 20px;"><i class="icon-desktop icon-2x"></i></h1>
 <div class="media-body">
-<h3 class="media-heading">Logistics included</h3>
-<p>There are a number of logistical hurdles when planning an event, from finding space and making sure you have the right equipment to ordering the right amount of food. We keep these logistics organized via a <a href="https://drive.google.com/?tab=mo&authuser=0#folders/0B4HP1ey91UqPb1RrN25YOFA4V3c">shared folder</a> which you can copy for your event. The <a href="https://openhatch.org/wiki/Open_Source_Comes_to_Campus/Logistics">Logistics</a> page has a bunch of advice as well (and is referenced several times from the overview documents in the shared folder.)</p>
-<p>If you find any of this documentation confusing or insufficient, we'll be happy to answer all your questions (and we'll use your feedback to improve our process!)</p>
+<h3 class="media-heading">Logistical advice and tools</h3>
+<p>There are a number of logistical hurdles when planning an event, from finding space and checking equipment to ordering the right amount of food. We want to make this process as painless as possible, so we wrote a guide and a set of tools. You can use <a href="https://drive.google.com/?tab=mo&authuser=0#folders/0B4HP1ey91UqPb1RrN25YOFA4V3c">this shareable folder</a> to keep track of your progress, and to access the email templates, space checklists, and other resources we've created for you.</p>
 </div>
 </div>
 <div class="homedivide">
@@ -148,7 +147,7 @@
 <h1 class="pull-left" style="margin-right: 20px;"><i class="icon-cloud icon-2x"></i></h1>
 <div class="media-body">
 <h3 class="media-heading">Publicity support</h3>
-<p>We'll provide you with a customizable <a href="https://openhatch.org/wiki/Open_Source_Comes_to_Campus/Logistics/Publicity_Website">publicity website</a> as well as template <a href="https://github.com/openhatch/open-source-comes-to-campus/tree/master/flyers/publicity_flyer_templates">flyers</a> and template <a href="https://drive.google.com/?tab=mo&authuser=0#folders/0B4HP1ey91UqPdkhaWDF1U2dhYzQ">emails</a>. We're happy to help if you have additional ideas for publicity.</p>
+<p>We'll provide you with a customizable <a href="https://openhatch.org/wiki/Open_Source_Comes_to_Campus/Logistics/Publicity_Website">publicity website</a> as well as template <a href="https://github.com/openhatch/open-source-comes-to-campus/tree/master/flyers/publicity_flyer_templates">flyers</a> and template <a href="https://drive.google.com/?tab=mo&authuser=0#folders/0B4HP1ey91UqPdkhaWDF1U2dhYzQ">publicity emails</a>. Want to get creative? We're happy to help you do additional publicity.</p>
 </div>
 </div>
 <div class="homedivide">
@@ -156,13 +155,12 @@
 <div class="media">
 <h2 class="pull-left" style="margin-right: 20px;"><i class="icon-globe icon-3x"></i></h2>
 <div class="media-body">
-<h3 class="media-heading">Volunteer staff</h3>
-<p>One of the most important parts of a successful event is making sure you have friendly, knowledgeable, enthusiastic staff. We have a large network of OpenHatch fans and volunteers who we'll ask to staff your event, and we'll help you <a href="https://openhatch.org/wiki/Open_Source_Comes_to_Campus/Logistics#How_do_you_find_staff.3F">find new volunteers</a> as well.<p>
-<p>We'll also support you with a number of remote staff, including:</p>
+<h3 class="media-heading">Friendly and knowledgeable volunteers</h3>
+<p>We have a large network of open source enthusiasts who we'll ask to staff your event, and we can help you <a href="https://openhatch.org/wiki/Open_Source_Comes_to_Campus/Logistics#How_do_you_find_staff.3F">find new volunteers</a> as well. We'll also support you with a number of remote staff, including:</p>
 <ul>
-<li>Throughout the event, Asheesh and/or Shauna will be available remotely.</li>
+<li>Throughout the entire event, at least one OpenHatch organizer will be available remotely.</li>
 <li>During the contributions workshop, we'll have maintainers of <a href="https://openhatch.org/wiki/OpenHatch_affiliated_projects">selected projects</a> available to help guide attendees through contributing to said projects via IRC.</li>
-<li>There are pros and cons to doing the career panel remotely. If you decide you want to do the career panel via videoconference, we can hook you up with some amazing people working in open source who will participate.</li>
+<li>If you want to do a career panel via videoconference, we can hook you up with some amazing people currently working in open source to be your panelists.</li>
 </ul>
 </div>
 <div class="homedivide">
