replaced text with images on landing screen

--- a/index.html
+++ b/index.html
@@ -4,11 +4,13 @@
     <link rel="stylesheet" href="./static/bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" href="./static/css/style.css" type="text/css">
 </head>
+
 <body class="home page" data-spy="scroll" data-target="#sidenav" screen_capture_injected="true">
+
 <div id="wrap">
 
 <div class="content">
-    <div class="main" role="main">
+<div class="main" role="main">
       <div class="jumbotron masthead">
         <div class="container">
             <div class="headerpane">
@@ -21,24 +23,20 @@
             </div>
         </div>
       </div>
-    </div>
-<div class="bluestripe">
-    <div class="container">
-        <div class="row">
-            <div class="col-md-4">
-            <h2><span class="glyphicon glyphicon-heart"></span> Welcoming.</h2>
-            <p>Open Source Comes to Campus is a curriculum designed for newcomers to open source. We've honed the workshop over three years of practice with 20 student groups, minimizing social, technical, and knowledge dependencies. Now you can run an inviting event like that, too.</p></div>
-            <div class="col-md-4">
-            <h2><span class="glyphicon glyphicon-thumbs-up"></span> Easy.</h2>
-            <p>As the organizer of a local event, you'll get all the teaching resources you need: slides, hands-on exercises for students, and more. We'll help you find professional programers to help during the event, and curate "bitesize bugs" so your attendees have a gentle on-ramp into a real open source project.
-            </p></div>
-            <div class="col-md-4">
-            <h2><span class="glyphicon glyphicon-wrench"></span> Practical.</h2>
-            <p>Students will rave about the practical skills they'll learn: version control, how to communicate in a big software project, and how open source culture works. They'll gain new connections to professionals active in open source development.
-            </p></div>
-        </div>
-    </div>
-</div>
+    </div> 
+	<div class="container no-space wide-container">
+	        <div class="row no-space">
+	            <div class="col-md-4 no-space">
+			<img src="./static/img/oh01.jpg" class="img-responsive">
+	            </div>
+		    <div class="col-md-4 no-space">
+			<img src="./static/img/oh03.jpg" class="img-responsive">
+		    </div>
+		    <div class="col-md-4 no-space">		
+			<img src="./static/img/oh02.jpg" class="img-responsive">
+		    </div>    
+		</div>
+	</div>
 <div class="container learnmore">
     <div class="row">
         <div class="col-md-12">
@@ -81,6 +79,11 @@
         </div>
         <div class="col-md-8">
         <p>We have a large network of open source enthusiasts who we'll ask to staff your event, and we can help you <a href="https://openhatch.org/wiki/Open_Source_Comes_to_Campus/Logistics#How_do_you_find_staff.3F">find new volunteers</a> as well. We'll also support you with a number of remote staff, including:</p>
+<ul>
+<li>Throughout the entire event, at least one OpenHatch organizer will be available remotely.</li>
+<li>During the contributions workshop, we'll have maintainers of <a href="https://openhatch.org/wiki/OpenHatch_affiliated_projects">selected projects</a> available to help guide attendees through contributing to said projects via IRC.</li>
+<li>If you want to do a career panel via videoconference, we can find you some amazing people currently working in open source to be your panelists.</li>
+</ul>
         </div>
     </div>
     
