minor html + css changes

--- a/index.html
+++ b/index.html
@@ -137,12 +137,10 @@ Sincerely,
 
 MY_NAME</div>
 </p>
-<div class="homedivide">
-<i class="icon-caret-down"></i></div>
-<div class="media">
-<h2 class="pull-left" style="margin-right: 20px;"><i class="icon-globe icon-3x"></i></h2>
-<div class="media-body">
-<h3 class="media-heading">Not affiliated with a college?</h3>
+<div class="row">
+        <div class="col-md-12">
+
+<h2>Not affiliated with a college?</h3>
 <p>If you're looking to participate, but you're not a student, staffer, or alumnus of a college, you can still help out! Here are other ways you can get involved:</p>
 <ul>
 <li>Volunteer to teach at an event near you</li>
@@ -151,7 +149,6 @@ MY_NAME</div>
 <li><a href="https://github.com/openhatch/open-source-comes-to-campus">Contribute to the project</a></li>
 </ul>
 <p>If any of that sounds appealing, email us: hello@openhatch.org.</p>
-</div>
 </div>
 </div>
 </div>
