--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
                 <center>
                 <h1>Bring open source to your campus.</h1>
                 <p class="lead">Open Source Comes to Campus is a one-day workshop to teach the tools and culture of open source development and to help students submit changes to real projects. Twenty schools</a> have run this event. What about yours?</p>
-                <button type="button" class="btn btn-lg btn-primary" href="#signup" id="actsignup"><span class="glyphicon glyphicon-ok-sign"></span> Get started</button> 
-                <button type="button" class="btn btn-lg btn-info" href="#learnmore"><span class="glyphicon glyphicon-question-sign"></span> Learn more</button>
+                <a type="button" class="btn btn-lg btn-primary" href="#signup" id="actsignup"><span class="glyphicon glyphicon-ok-sign"></span> Get started</a> 
+                <a type="button" class="btn btn-lg btn-info" href="#learnmore"><span class="glyphicon glyphicon-question-sign"></span> Learn more</a>
                 </center>
             </div>
         </div>
