minor css and wording changes

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 <div class="container learnmore">
     <div class="row">
 	<div class="col-md-8 col-md-offset-2">
-            <h2 id="learnmore">What is Open Source Comes to Campus?</h2>
+            <h1 id="learnmore">What we provide</h1>
         </div>
     </div>
     
@@ -80,7 +80,7 @@
     
     <div class="row">
 	<div class="col-md-8 col-md-offset-2">
-            <h2>Sponsors</h2>
+            <h1>Sponsors</h1>
 <p>Open Source Comes to Campus has relationships with sponsors who frequently cover the cost of food and/or travel, and support our ability to help run these events. It is highly likely (though not guaranteed) that those sponsors will be willing to do the same for your event.</p>
         </div>
     </div>
@@ -107,9 +107,8 @@
 <div class="container">
     <div class="row">
 	<div class="col-md-8 col-md-offset-2">
-            <h1 id="signup"><span class="glyphicon glyphicon-send"></span> Get started.</h1>
-        <p>Copy and paste the text to the right into your email program and contact us at <a href="mailto:hello@openhatch.org">hello@openhatch.org</a>. Be sure to replace the ALL_CAPS_WORDS with something relevant to you!</p>
-        <p>After you've emailed us, you may also wish to <a href="http://lists.openhatch.org/mailman/listinfo/osctc-planning">join the Open Source Comes to Campus mailing list</a>. You may also wish to <a href="https://twitter.com/openhatch">follow OpenHatch on Twitter</a> or <a href="https://openhatch/contact/">join the OpenHatch IRC channel</a>.</p>
+            <h1 id="signup">Get started</h1>
+        <p>Copy and paste the text to the right into your email program and send it to <a href="mailto:hello@openhatch.org">hello@openhatch.org</a>. Be sure to replace the ALL_CAPS_WORDS with your information!</p>
 <p><pre>
 To: hello@openhatch.org
 Subject: Let's bring Open Source Comes to Campus to COLLEGE_NAME
@@ -126,15 +125,16 @@ Let's work together and make an event happen!
 
 Sincerely,
 
-MY_NAME</div>
-	
-</p>
+MY_NAME</p></pre>
+
+<p>After you've emailed us, you may also wish to <a href="http://lists.openhatch.org/mailman/listinfo/osctc-planning">join the Open Source Comes to Campus mailing list</a>. You may also wish to <a href="https://twitter.com/openhatch">follow OpenHatch on Twitter</a> or <a href="https://openhatch/contact/">join the OpenHatch IRC channel</a>.</p>
+</div>
 </div>
 
 <div class="row">
 	<div class="col-md-8 col-md-offset-2">
 
-<h2>Not affiliated with a college?</h3>
+<h1>How to help out</h1>
 <p>If you're looking to participate, but you're not a student, staffer, or alumnus of a college, you can still help out! Here are other ways you can get involved:</p>
 <ul>
 <li>Volunteer to teach at an event near you</li>
